--- a/index.html
+++ b/index.html
@@ -18,23 +18,31 @@
     </nav>
   </header>
 
+  <a class="skip-main" href="#filter-options">Skip to main content</a>
+
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="interactive map" role="application"></div>
     </section>
     <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+      <div aria-label="filter options" class="filter-options">
+        <h2 id="filter-options">Filter Results</h2>
+
+        <label id="neighborhoods-label" hidden>Select Neighborhood</label>
+        <select id="neighborhoods-select" aria-labelledby="neighborhoods-label" name="neighborhoods"
+          onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+
+        <label id="cuisines-label" hidden>Select Cuisine</label>
+        <select id="cuisines-select" aria-labelledby="cuisines-label" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" role="contentinfo"></ul>
     </section>
   </main>
+
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
@@ -43,7 +51,7 @@
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
 
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
