--- a/index.html
+++ b/index.html
@@ -1,60 +1,83 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      src="//normalize-css.googlecode.com/svn/trunk/normalize.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin=""
+    />
+    <title>Restaurant Reviews</title>
+  </head>
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
-  <title>Restaurant Reviews</title>
-</head>
+  <body>
+    <header>
+      <nav>
+        <h1><a href="/">Restaurant Reviews</a></h1>
+      </nav>
+    </header>
 
-<body>
-  <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
-  </header>
+    <a class="skip-main" href="#filter-options">Skip to main content</a>
 
-  <a class="skip-main" href="#filter-options">Skip to main content</a>
+    <main id="maincontent">
+      <section id="map-container">
+        <div id="map" aria-label="interactive map" role="application"></div>
+      </section>
+      <section>
+        <div aria-label="filter options" class="filter-options">
+          <h2 id="filter-options">Filter Results</h2>
 
-  <main id="maincontent">
-    <section id="map-container">
-      <div id="map" aria-label="interactive map" role="application"></div>
-    </section>
-    <section>
-      <div aria-label="filter options" class="filter-options">
-        <h2 id="filter-options">Filter Results</h2>
+          <label id="neighborhoods-label" hidden>Select Neighborhood</label>
+          <select
+            id="neighborhoods-select"
+            aria-labelledby="neighborhoods-label"
+            name="neighborhoods"
+            onchange="updateRestaurants()"
+          >
+            <option value="all">All Neighborhoods</option>
+          </select>
 
-        <label id="neighborhoods-label" hidden>Select Neighborhood</label>
-        <select id="neighborhoods-select" aria-labelledby="neighborhoods-label" name="neighborhoods"
-          onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
-        </select>
+          <label id="cuisines-label" hidden>Select Cuisine</label>
+          <select
+            id="cuisines-select"
+            aria-labelledby="cuisines-label"
+            name="cuisines"
+            onchange="updateRestaurants()"
+          >
+            <option value="all">All Cuisines</option>
+          </select>
+        </div>
+        <ul id="restaurants-list" role="contentinfo"></ul>
+      </section>
+    </main>
 
-        <label id="cuisines-label" hidden>Select Cuisine</label>
-        <select id="cuisines-select" aria-labelledby="cuisines-label" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
-        </select>
-      </div>
-      <ul id="restaurants-list" role="contentinfo"></ul>
-    </section>
-  </main>
+    <script
+      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+      crossorigin=""
+    ></script>
+    <script
+      type="application/javascript"
+      charset="utf-8"
+      src="js/dbhelper.js"
+    ></script>
+    <script
+      type="application/javascript"
+      charset="utf-8"
+      src="js/main.js"
+    ></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-
-  <footer id="footer" role="contentinfo">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
-
-</body>
-
+    <footer id="footer" role="contentinfo">
+      Copyright (c) 2017
+      <a href="/"><strong>Restaurant Reviews</strong></a>
+      All Rights Reserved.
+    </footer>
+  </body>
 </html>
